Auto-enrich vault [skip-enrich]